--- a/templates/index.html
+++ b/templates/index.html
@@ -23,90 +23,35 @@
             font-family: 'Jua', sans-serif;
         }
 
-        .mytitle {
-
-            color: white;
-
-            text-align: center;
-
-            width: 300px;
-            height: 200px;
-
-            background-image: url("https://www.ancient-origins.net/sites/default/files/field/image/Agesilaus-II-cover.jpg");
-            background-size: cover;
-            background-position: center;
-
-            border-radius: 10px;
-
-            padding-top: 40px;
-
-            margin-top: 30px;
-            margin-bottom: 30px;
-
-        }
-
-        .mytitle2 {
-            background-color: green;
-
+      body{
             width: 100%;
-
+            margin: 100px;
+            display: flex;
+            justify-content: center;
+        }
+        .login-form{
+            width: 500px;
             height: 250px;
-
-            color: white;
-
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://the.wordrow.kr/dict/meaning/img/271128.png");
-            background-position: center 30%;
-            background-size: cover;
-
+            padding: 20px;
+            border: solid 2px black;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-
+            justify-content: space-between;
+            border-radius: 20px;
         }
-
-        .mytitle2 > button {
-            width: 300px;
+        input {
             height: 50px;
-
-            background-color: transparent;
-            color: white;
-
-            border-radius: 50px;
-            border: 1px solid white;
-
             margin-top: 10px;
         }
-
-        .mytitle2 > button:hover {
-            border: 2px solid white;
+        button {
+            width: 150px;
+            height: 50px;
+            border-radius: 10px;
+            margin-top: 20px;
         }
-
-        .wrap {
-
-            width: 300px;
-
-            margin: auto;
-
-
-        }
-
-        .wrap2 {
-            display: none;
-        }
-
-        .mypost {
-            width: 95%;
-            max-width: 500px;
-            margin: 20px auto 0px auto;
-            padding: 20px;
-            box-shadow: 0px 0px 3px 0px gray;
-
-            display: none;
-        }
-
-        .mycards {
-            margin-top: 40px;
+        label {
+            cursor: pointer;
+            margin-top: 10px;
         }
     </style>
 
@@ -197,19 +142,15 @@
 </head>
 <body>
 
-    <div class="wrap" id="wrap">
 
-        <div class="mytitle">
-            <h1>로그인 페이지</h1>
-            <h5>아이디 비밀번호를 입력해주세요</h5>
-        </div>
-
-        <p>ID: <input type="text"/></p>
-        <p>PW: <input type="text"/></p>
-        <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
-
-    </div>
-
+  <form class="login-form">
+      <h2>로그인</h2>
+      <label for="id">아이디</label>
+      <input name="id" id="id" placeholder="ID" />
+      <label for="pw">비번</label>
+      <input name="pw" id="pw" placeholder="PW" />
+      <button onclick="#">로그인</button>
+  </form>
 
     <div id="wrap2" class="wrap2">
 
