--- a/templates/index.html
+++ b/templates/index.html
@@ -142,15 +142,21 @@
 </head>
 <body>
 
+    <div class="wrap" id="wrap">
 
-  <form class="login-form">
-      <h2>로그인</h2>
+        <div class="mytitle">
+            <h1>로그인 페이지</h1>
+            <h5>아이디 비밀번호를 입력해주세요</h5>
+        </div>
+
       <label for="id">아이디</label>
       <input name="id" id="id" placeholder="ID" />
       <label for="pw">비번</label>
       <input name="pw" id="pw" placeholder="PW" />
-      <button onclick="#">로그인</button>
-  </form>
+        <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
+
+    </div>
+
 
     <div id="wrap2" class="wrap2">
 
