--- a/templates/index.html
+++ b/templates/index.html
@@ -23,35 +23,90 @@
             font-family: 'Jua', sans-serif;
         }
 
-      body{
-            width: 100%;
-            margin: 100px;
-            display: flex;
-            justify-content: center;
+        .mytitle {
+
+            color: white;
+
+            text-align: center;
+
+            width: 300px;
+            height: 200px;
+
+            background-image: url("https://www.ancient-origins.net/sites/default/files/field/image/Agesilaus-II-cover.jpg");
+            background-size: cover;
+            background-position: center;
+
+            border-radius: 10px;
+
+            padding-top: 40px;
+
+            margin-top: 30px;
+            margin-bottom: 30px;
+
         }
-        .login-form{
-            width: 500px;
+
+        .mytitle2 {
+            background-color: green;
+
+            width: 100%;
+
             height: 250px;
-            padding: 20px;
-            border: solid 2px black;
+
+            color: white;
+
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://the.wordrow.kr/dict/meaning/img/271128.png");
+            background-position: center 30%;
+            background-size: cover;
+
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            border-radius: 20px;
+            justify-content: center;
+            align-items: center;
+
         }
-        input {
+
+        .mytitle2 > button {
+            width: 300px;
             height: 50px;
+
+            background-color: transparent;
+            color: white;
+
+            border-radius: 50px;
+            border: 1px solid white;
+
             margin-top: 10px;
         }
-        button {
-            width: 150px;
-            height: 50px;
-            border-radius: 10px;
-            margin-top: 20px;
+
+        .mytitle2 > button:hover {
+            border: 2px solid white;
         }
-        label {
-            cursor: pointer;
-            margin-top: 10px;
+
+        .wrap {
+
+            width: 300px;
+
+            margin: auto;
+
+
+        }
+
+        .wrap2 {
+            display: none;
+        }
+
+        .mypost {
+            width: 95%;
+            max-width: 500px;
+            margin: 20px auto 0px auto;
+            padding: 20px;
+            box-shadow: 0px 0px 3px 0px gray;
+
+            display: none;
+        }
+
+        .mycards {
+            margin-top: 40px;
         }
     </style>
 
@@ -149,10 +204,10 @@
             <h5>아이디 비밀번호를 입력해주세요</h5>
         </div>
 
-      <label for="id">아이디</label>
-      <input name="id" id="id" placeholder="ID" />
-      <label for="pw">비번</label>
-      <input name="pw" id="pw" placeholder="PW" />
+          <label for="id">아이디</label>
+          <input name="id" id="id" placeholder="ID" />
+          <label for="pw">비번</label>
+          <input name="pw" id="pw" placeholder="PW" />
         <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
 
     </div>
