--- a/templates/index.html
+++ b/templates/index.html
@@ -23,26 +23,11 @@
             font-family: 'Jua', sans-serif;
         }
 
-        .mytitle {
-
-            color: white;
-
-            text-align: center;
-
-            width: 300px;
-            height: 200px;
-
-            background-image: url("https://www.ancient-origins.net/sites/default/files/field/image/Agesilaus-II-cover.jpg");
-            background-size: cover;
-            background-position: center;
-
-            border-radius: 10px;
-
-            padding-top: 40px;
-
-            margin-top: 30px;
-            margin-bottom: 30px;
-
+        body{
+            width: 100%;
+            margin: 100px;
+            display: flex;
+            justify-content: center;
         }
 
         .mytitle2 {
@@ -108,6 +93,28 @@
         .mycards {
             margin-top: 40px;
         }
+
+        label {
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .login-form{
+            width: 500px;
+            height: 250px;
+            padding: 20px;
+            border: solid 2px black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border-radius: 20px;
+        }
+
+        input {
+            height: 50px;
+            margin-top: 10px;
+        }
+
     </style>
 
     <script>
@@ -198,19 +205,15 @@
 <body>
 
     <div class="wrap" id="wrap">
-
-        <div class="mytitle">
-            <h1>로그인 페이지</h1>
-            <h5>아이디 비밀번호를 입력해주세요</h5>
-        </div>
-
-          <label for="id">아이디</label>
-          <input name="id" id="id" placeholder="ID" />
-          <label for="pw">비번</label>
-          <input name="pw" id="pw" placeholder="PW" />
-        <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
-
-    </div>
+<div class="login-form">
+      <h2>로그인</h2>
+      <label for="id">아이디</label>
+      <input name="id" id="id" placeholder="ID" />
+      <label for="pw">비번</label>
+      <input name="pw" id="pw" placeholder="PW" />
+     <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
+</div>
+      </div>
 
 
     <div id="wrap2" class="wrap2">
