--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 
         .login-form{
             width: 500px;
-            height: 250px;
+            height: 350px;
             padding: 20px;
             border: solid 2px black;
             display: flex;
@@ -115,6 +115,12 @@
             margin-top: 10px;
         }
 
+        button {
+            width: 150px;
+            height: 50px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
     </style>
 
     <script>
