--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
             margin-top: 10px;
         }
 
-        .login-form{
+        .login-box{
             width: 500px;
             height: 350px;
             padding: 20px;
@@ -211,14 +211,14 @@
 <body>
 
     <div class="wrap" id="wrap">
-<div class="login-form">
-      <h2>로그인</h2>
-      <label for="id">아이디</label>
-      <input name="id" id="id" placeholder="ID" />
-      <label for="pw">비번</label>
-      <input name="pw" id="pw" placeholder="PW" />
-     <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
-</div>
+        <div class="login-box">
+            <h2>로그인</h2>
+            <label for="id">아이디</label>
+            <input name="id" id="id" placeholder="ID" />
+            <label for="pw">비번</label>
+            <input name="pw" id="pw" placeholder="PW" />
+            <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
+        </div>
       </div>
 
 
