--- a/templates/index.html
+++ b/templates/index.html
@@ -218,6 +218,7 @@
             <label for="pw">비번</label>
             <input name="pw" id="pw" placeholder="PW" />
             <button onclick="hey()" class="btn btn-dark">로그인 하기</button>
+            
         </div>
       </div>
 
@@ -228,6 +229,7 @@
         <div class="mytitle2">
             <h1>좋아하는 연예인에게 투표하세요♥♥♥</h1>
             <button onclick="open_box()">응원하고 싶은 연예인 추가하기</button>
+            <h5>커밋 푸시 잘되는지 확인해 볼게요</h5>
         </div>
 
         <div id="mypost" class="mypost">
